[package]
name = "hace"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/amtitan/hace"
description = "A rust library to make it easier to hack in games"
license = "GLP-3.0"
licance-file = "LICENSE.txt"
keywords = ["hack", "hacking"]
publish = ["hace"]
index = "https://github.com/amtitan/hace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
enigo = "0.0.14"
process-memory = "0.4.0"
rand = "0.8.5"
sysinfo = "0.23.2"
